# coding-tests

./: .gitmodules  new_look.js
alphasights/: company_determiner.rb
backend-birthday-assignment-1-pgqpvw/: Pipfile  README.md  birthday_determiner.py  json_parser.py  main.py  person.py  tests.py
chase/: Gemfile  test.rb  test_spec.rb
coding_zen_giovannif/: Gemfile  README.md  demo.rb
developer-joyofenergy-ruby/: Gemfile
elysian-assignment/: Dockerfile  docker-compose.yml  pyproject.toml
engineer-ai-test/: README.md
gf_auction_test/: README.md  auction.py  base_instruction.py  bid.py  heartbeat.py  instructions_parser.py  main.py  task_brief.md  test_auction.py  test_bid.py  test_instructions_parser.py  test_main.py
gf_utility_parse_and_display_git/: README.md  manage.py
go_cardless/: payments.csv  test.rb  test_spec.rb
lantern-ai-test-python/python-coding-test-main/: pyproject.toml  solution.md
lantern-ai-test-python/python-coding-test-main/assets/: invalid_file.txt
lantern-ai-test-python/python-coding-test-main/src/: comparison_service.py  data_retrieval_service.py  main.py  pdf_service.py  tests.py
lollipop/: lollipop.rb
mars_rover_problem/: Gemfile  README.md  sample_data.txt
mustard_systems/: golf.py
oaknorth/: consumer.py  test_consumer.py
python_finance/: bhdg.py  sefe.py
python_playground/: playground.py
ruby-vending-machine/: Gemfile  app.rb  readme.md
selfridges/: Gemfile  json.rb
sylvera-assignment/: Dockerfile  docker-compose.yml  package-lock.json  package.json  tsconfig.json
ts_playground/: package-lock.json  (+3 more)
(+110 files in other folders)
